# krill

./: .clang-format  .gitignore  CMakeLists.txt  README.cn.md  README.md  xmake.lua
.github/workflows/: cppbuild.yml
.xmake/macosx/arm64/: xmake.conf
.xmake/macosx/arm64/cache/: config  detect  history  package  toolchain
demo/: c99.l  calc  calc.c  calc.cpp  simple_regex_parsing.cpp
docs/: c99.l  c99.l.in  c99.y  c99.y.in  minic.l.in  minic.y  minic.y.in  minic.y.sdt.yy  minic2.l  minic2.y  regex.y  syntax-directed-translation.md
grammar/: calculator.lexical  calculator.syntax  regex.syntax
krill/: CMakeLists.txt  xmake.lua
krill/include/krill/: FaModels.h  attrdict.h  automata.h  codegen.h  defs.h  deps.h  export.h  grammar.h  ir.h  ir_opt.h  krill.h  lexical.h  minic.h  minic_sdt.h  mips_backend.h  regex.h  syntax.h  utils.h
krill/src/: FaModels.cpp  attrdict.cpp  automata.cpp  codegen.cpp  defs.cpp  grammar.cpp  ir.cpp  ir_opt.cpp  lexical.cpp  minic.cpp  minic_backend.cpp  minic_ir_opt.cpp  minic_parser.cpp  minic_sdt.cpp  mips_backend.cpp  regex.cpp  syntax.cpp  utils.cpp
standalone/: CMakeLists.txt  calc.cpp  calc2.cpp  kriller.cpp  mico.cpp  xmake.lua
test/: CMakeLists.txt  minic_backend.cpp  minic_init_lexical.cpp  minic_init_syntax.cpp  minic_ir_opt.cpp  minic_sdt.cpp  test.cpp  test_FaModels.cpp  test_automata.cpp  test_codegen.cpp  test_codegen_c.cpp  test_codegen_c9.cpp  test_codegen_cpp.cpp  test_codegen_regex.cpp  test_grammar.cpp  test_lexical.cpp  test_minic.cpp  test_regex.cpp  test_syntax.cpp  xmake.lua
test/grammar/: calculator.syntax  minic.lexical  minic.syntax  minic.syntax.yacc  regex.lexical
test/minic-testcase/: 01.c  02.c  03.c  04.c  05.c  06.c  07.c  08.c  09.c  10.c  11.c  12.c  13.c  14.c
